--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'java'
 }
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
 group 'org.example'
 version '1.0-SNAPSHOT'
 repositories {
