--- a/src/test/resources/forProfile/testDataProfile.properties
+++ b/src/test/resources/forProfile/testDataProfile.properties
@@ -36,4 +36,4 @@ errorTooManyHashtags=Required no more than 5 hashtags
 errorRequired=Required
 errorIncorrectResolutionPhoto=Required photo in resolution from 100x100 to 10000x10000
 errorIncorrectSizePhoto=Required photo in size to 5MB
-errorTooManyParticipants=Required no more than 10000 participants
+errorTooManyParticipants=Required no more than 10 000 participants
