--- a/src/main/resources/azure.properties
+++ b/src/main/resources/azure.properties
@@ -1,3 +1,3 @@
-url = jdbc:sqlserver://eventsexpressserver.database.windows.net:1433;database=eventsexpress-test;encrypt=true;trustServerCertificate=false;hostNameInCertificate=eventsexpressserver.database.windows.net;loginTimeout=30
+url = tcp:eventsexpress-server.database.windows.net,1433;Initial Catalog=eventsexpress-test-qa;Persist Security Info=False;User ID=dbadmin;Password={express20!};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
 user = dbadmin
 password = express20!
