--- a/src/main/resources/driver.properties
+++ b/src/main/resources/driver.properties
@@ -1,7 +1,7 @@
-browser = chrome
-webDriverKey = webdriver.chrome.driver
-webDriverValue = D:/moe/my_projects_on_java/softserve/chromedriver.exe
-#browser = gecko
-#webDriverKey = webdriver.gecko.driver
-#webDriverValue = D:/moe/my_projects_on_java/softserve/EVAT/geckodriver.exe
+#browser = chrome
+#webDriverKey = webdriver.chrome.driver
+#webDriverValue = src/test/resources/chromedriver.exe
+browser = gecko
+webDriverKey = webdriver.gecko.driver
+webDriverValue = src/test/resources/geckodriver.exe
 
