--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,12 @@ repositories {
 }
 dependencies {
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-    //compile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version: '3.141.59'
     compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.4.1.jre8'
-    // https://mvnrepository.com/artifact/com.google.guava/guava
     compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
     implementation 'org.testng:testng:6.14.3'
     testCompile group: 'org.testng', name: 'testng', version: '7.3.0'
+    testCompile group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
+
 }
 test{
     useTestNG()
