--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
     implementation 'org.testng:testng:6.14.3'
     testCompile group: 'org.testng', name: 'testng', version: '7.3.0'
-    testCompile group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
+    compile group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
 
 }
 test{
