--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,38 @@
 plugins {
+	id "io.qameta.allure" version "2.8.1"
     id 'java'
 }
+
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
-group 'org.example'
-version '1.0-SNAPSHOT'
+
 repositories {
     mavenCentral()
+    jcenter()
 }
+
 dependencies {
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-    //compile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version: '3.141.59'
     compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.4.1.jre8'
-    // https://mvnrepository.com/artifact/com.google.guava/guava
-    compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
-    implementation 'org.testng:testng:6.14.3'
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+	runtime group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.6'
     testCompile group: 'org.testng', name: 'testng', version: '7.3.0'
+    testCompile group: 'io.qameta.allure', name: 'allure-testng', version: '2.13.6'
+	testCompile group: 'io.qameta.allure', name: 'allure-descriptions-javadoc', version: '2.13.6'
+	//compile group: 'io.qameta.allure', name: 'allure-attachments', version: '2.13.6'
+	//compile group: 'io.qameta.allure', name: 'allure-plugin-api', version: '2.13.6'
+	//compile group: 'io.qameta.allure', name: 'allure-generator', version: '2.13.6'
+	//compile group: 'org.apache.maven.plugins', name: 'maven-surefire-plugin', version: '3.0.0-M5'
+	
 }
+
+allure {
+    version = '2.13.6'
+    autoconfigure = true
+    aspectjweaver = true
+}
+
 test{
     useTestNG()
 }
