--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation 'org.testng:testng:6.14.3'
     testCompile group: 'org.testng', name: 'testng', version: '7.3.0'
     compile group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+
 
 }
 test{
