--- a/src/main/resources/azure.properties
+++ b/src/main/resources/azure.properties
@@ -1,3 +1,3 @@
-url = tcp:eventsexpress-server.database.windows.net,1433;Initial Catalog=eventsexpress-test-qa;Persist Security Info=False;User ID=dbadmin;Password={express20!};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
+url = jdbc:sqlserver://eventsexpress-server.database.windows.net:1433;databaseName=eventsexpress-test-qa;user=dbadmin;password=express20!;
 user = dbadmin
 password = express20!
