--- a/src/main/resources/driver.properties
+++ b/src/main/resources/driver.properties
@@ -1,6 +1,6 @@
 browser = chrome
 webDriverKey = webdriver.chrome.driver
-webDriverValue = /Users/illyashulman/EventExpressTest/chromedriver
+webDriverValue = src/test/resources/chromedriver.exe
 #browser = gecko
 #webDriverKey = webdriver.gecko.driver
 #webDriverValue = src/test/resources/geckodriver.exe
