test jenkins allure

--- a/src/test/resources/testDataEntering.properties
+++ b/src/test/resources/testDataEntering.properties
@@ -1,4 +1,4 @@
-homePage = https://eventsexpress-test.azurewebsites.net/home/events?page=1
+homePage = https://eventsexpress-qa.azurewebsites.net/home/events?page=1
 email = gulpakmarina@gmail.com
 password = lenovo13
 userName= gulpakmarina
